[package]
name = "mlg"
version = "0.1.0"
edition = "2021"

[[test]]
name = "test"
path = "test/test.rs"

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
async-trait = "0.1.74"
tempfile = "3.8.1"

[dev-dependencies]
serde = { version = "1.0.192", features = ["derive"] }
bincode = "1.3.3"